commit before styling

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <div id="forecast1" class="card col">
                     <p id="date"></p>
                     <p id="status"></p>
-                    <label for="city-name">City:</label>
+                    <label for="city-name">Temperature:</label>
                     <p id="temp"></p>
-                    <label for="city-name">City:</label>
+                    <label for="city-name">Wind:</label>
                     <p id="wind"></p>
-                    <label for="city-name">City:</label>
+                    <label for="city-name">Humidity:</label>
                     <p id="humidity"></p>
                 </div>
                 <div id="forecast2" class="card col">
@@ -98,11 +98,11 @@
                 <div id="forecast5" class="card col">
                     <p id="date"></p>
                     <p id="status"></p>
-                    <label for="city-name">City:</label>
+                    <label for="city-name">Temperature:</label>
                     <p id="temp"></p>
-                    <label for="city-name">City:</label>
+                    <label for="city-name">Wind:</label>
                     <p id="wind"></p>
-                    <label for="city-name">City:</label>
+                    <label for="city-name">Humidity:</label>
                     <p id="humidity"></p>
                 </div>
             </div>
